# auth

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml
.github/workflows/: deploy.yml
migrations/2025-04-09-141255_create_users/: up.sql
migrations/2025-04-09-141255_create_users copy/: up.sql
migrations/2025-05-24-110112_add_bio/: down.sql  up.sql
monitoring/: prometheus.yml
src/: controller.rs  lib.rs  main.rs  metrics.rs  models.rs  repository.rs  routes.rs  schema.rs  service.rs
src/controller/: controller.rs  profile_controller.rs  user_controller.rs
src/factory/: connection_factory.rs  mod.rs
src/model/: profile.rs  user.rs
src/repository/: profile_repository.rs  user_repository.rs
src/routes/: routes.rs
src/service/: profile_service.rs  user_service.rs
src/services/: service.rs
tests/: lib.rs  main.rs
tests/controller/: mod.rs  profile_controller_test.rs  user_controller_test.rs
tests/factory/: connection_factory_test.rs  mod.rs
tests/model/: profile_builder_test.rs  profile_test.rs  user_test.rs
tests/repository/: mod.rs  profile_repository_test.rs  user_repository_test.rs
tests/routes/: mod.rs  routes_test.rs
tests/service/: mod.rs  profile_service_test.rs  user_service_test.rs
