[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.12"
jsonwebtoken = "8.1"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
actix-rt = "2.5"
uuid = "1.2"
