[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[lib]
name = "auth"
path = "src/lib.rs"

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
actix-web-prom = "0.7"
tera = "1.17"
actix-web-codegen = "4"
diesel = { version = "2.0", features = [
    "postgres", 
    "r2d2"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.12"
jsonwebtoken = "8.1"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
actix-rt = "2.8.0"
uuid = "1.2"
lazy_static = "1.4.0"
mockall = "0.11.4"
rand = "0.8"
async-trait = "0.1"
actix-http = "3.3.1"
diesel_migrations = "2.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
